# move-review-sentiment-analysis-model

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  data_preprocessing.ipynb  docker-compose.yaml  main.ipynb  main.py  pyproject-ui-deploy.toml  pyproject.toml
.streamlit/: secrets.example.toml
notebooks/: data_preprocessing.ipynb  deploy.ipynb  fine_tune.ipynb
utils/: load_data.py
