[project]
name = "move-review-sentiment-analysis-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "onnx>=1.19.1",
    "onnxscript>=0.5.6",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers[torch]>=4.57.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]
